@@ -17,6 +17,11 @@ Added machine Amstrad CPC 4128
 Added CPC machines support to ZSF snapshots
 Added tape to wav converter (tap, tzx, o, p to wav)
 
+Improved Debugger:
+-Now you can disassemble on the Step-to-step mode from the Debug cpu menu
+-Now you can assemble from the Debug cpu menu
+-Added Chloe memory Zone
+
 Improved CPU usage in TBBlue:
 -Use 4% less cpu time (in my machine) when only ULA and/or Tiles enabled
 -Use 1% less cpu time (in my machine) when all layers enabled
